+++++++++++
Python News
+++++++++++

What's New in Python 3.3.3 release candidate 1?
===============================================

*Not yet released, see sections below for changes released in 3.3.2*

.. *Release date: TBD*

Core and Builtins
-----------------

- Issue #18180: Fix ref leak in _PyImport_GetDynLoadWindows().

- Issue #18038: SyntaxError raised during compilation sources with illegal
  encoding now always contains an encoding name.

- Issue #17644: Fix a crash in str.format when curly braces are used in square
  brackets.

- Issue #17983: Raise a SyntaxError for a ``global __class__`` statement in a
  class body.

- Issue #17927: Frame objects kept arguments alive if they had been copied into
  a cell, even if the cell was cleared.

Library
-------

- Issue #16102: Make uuid._netbios_getnode() work again on Python 3.

- Issue #18109: os.uname() now decodes fields from the locale encoding, and
  socket.gethostname() now decodes the hostname from the locale encoding,
  instead of using the UTF-8 encoding in strict mode.

- Issue #17403: urllib.parse.robotparser normalizes the urls before adding to
  ruleline. This helps in handling certain types invalid urls in a conservative
  manner.

- Issue #18025: Fixed a segfault in io.BufferedIOBase.readinto() when raw
  stream's read() returns more bytes than requested.

- Issue #18011: base64.b32decode() now raises a binascii.Error if there are
  non-alphabet characters present in the input string to conform a docstring.
  Updated the module documentation.

- Issue #13772: Restored directory detection of targets in ``os.symlink`` on
  Windows, which was temporarily removed in Python 3.2.3 due to an incomplete
  implementation. The implementation now works even if the symlink is created
  in a location other than the current directory.

- Issue #16986: ElementTree now correctly parses a string input not only when
  an internal XML encoding is UTF-8 or US-ASCII.
